Sujet 2 - Romain GILOT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=demo
+spring.application.name=RomainGILOT_EvaluationJava
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_td?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3307/spring_td?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -11,3 +11,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode = always
 
 secret.jwt=dfg64bfg65b65fgb65sb654n4g41bg53bsf631sgb3fg
+
+server.port=7778
